<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_main_back"
    android:orientation="horizontal"
    android:weightSum="1"
    tools:context="projects.talga.kz.calc.MidtermActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="17"
        tools:ignore="UselessParent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="8dp"
            android:layout_weight="3"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/grade1_edit_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.40"
                android:inputType="number|numberDecimal"
                android:textAlignment="center"
                android:textSize="32sp" />

            <ImageButton
                android:id="@+id/add_btn"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1.60"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center"
                android:onClick="subTotal"
                android:padding="16dp"
                android:src="@drawable/plusicon"
                android:scaleType="centerCrop"
                android:textSize="32sp"
                android:typeface="monospace"
                tools:ignore="ContentDescription,HardcodedText"
                android:contentDescription="" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="8dp"
            android:layout_weight="3"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/subtotal_text_view"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:fontFamily="sans-serif-smallcaps"
                android:gravity="center"
                android:text="@string/_0"
                android:textAllCaps="true"
                android:textSize="22sp"
                android:textStyle="italic" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="8dp"
            android:layout_weight="2"
            android:orientation="horizontal">

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/midterm1_rb"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/midterm_rb_text" />

                <RadioButton
                    android:id="@+id/midterm2_rb"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/midterm_rb2_text" />
            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="8dp"
            android:layout_weight="2"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/midterm1_text_view"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/midterm1_text_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/_0"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="8dp"
            android:layout_weight="2"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/midterm2_text_view"
                android:textAllCaps="true"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/midterm2_text_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/_0"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="8dp"
            android:layout_weight="2"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/total_text_view"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/total_text_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/_0"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="8dp"
            android:layout_weight="3"
            android:orientation="horizontal">

            <Button
                android:id="@+id/calculate_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="displayResult"
                android:padding="16dp"
                android:text="@string/calculate_btn"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/reset_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="16dp"
                android:text="@string/reset_btn"
                android:onClick="displayReset"
                tools:ignore="ButtonStyle" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
