<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    tools:context="projects.talga.kz.calc.GPA_Activity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:text="@string/attention"
                    android:textAlignment="center"
                    android:textColor="@color/back_color_04"
                    android:textSize="12sp"
                    android:textStyle="bold" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:padding="16dp"
                    android:text="@string/gpa_text_view"
                    android:textAlignment="textEnd"
                    android:textColor="@color/color_main_3"
                    android:textSize="32sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/gpa_result_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:padding="16dp"
                    android:text="@string/_0"
                    android:textAlignment="textStart"
                    android:textColor="#000000"
                    android:textSize="32sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:padding="8dp"
                    android:text="@string/previous_gpa"
                    android:textAlignment="center"
                    android:textColor="@color/color_main_3"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/prev_result_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:inputType=""
                    android:padding="10dp"
                    android:text="@string/_0"
                    android:textAlignment="center"
                    android:textSize="16sp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/color_main_2"
                android:weightSum="3">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:padding="6dp"
                    android:text="@string/number"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:padding="6dp"
                    android:text="@string/grade"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:padding="6dp"
                    android:text="@string/credits"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="3">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="0.60"
                    android:padding="6dp"
                    android:text="@string/_1"
                    android:textAlignment="center"
                    android:textSize="18sp" />

                <Spinner
                    android:id="@+id/spinner_one"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:padding="6dp"
                    android:textAlignment="center"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/credit1_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1.40"
                    android:inputType="number|numberDecimal"
                    android:padding="6dp"
                    android:textAlignment="center"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="3">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="0.60"
                    android:padding="6dp"
                    android:text="@string/_2"
                    android:textAlignment="center"
                    android:textSize="18sp" />

                <Spinner
                    android:id="@+id/spinner_two"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:padding="6dp"
                    android:textAlignment="center"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/credit2_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1.40"
                    android:inputType="number|numberDecimal"
                    android:padding="6dp"
                    android:textAlignment="center"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="3">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="0.60"
                    android:padding="6dp"
                    android:text="@string/_3"
                    android:textAlignment="center"
                    android:textSize="18sp" />

                <Spinner
                    android:id="@+id/spinner_three"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:padding="6dp"
                    android:textAlignment="center"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/credit3_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1.40"
                    android:inputType="number|numberDecimal"
                    android:padding="6dp"
                    android:textAlignment="center"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="3">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="0.60"
                    android:padding="6dp"
                    android:text="@string/_4"
                    android:textAlignment="center"
                    android:textSize="18sp" />

                <Spinner
                    android:id="@+id/spinner_four"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:padding="6dp"
                    android:textAlignment="center"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/credit4_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1.40"
                    android:inputType="number|numberDecimal"
                    android:padding="6dp"
                    android:textAlignment="center"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="3">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="0.60"
                    android:padding="6dp"
                    android:text="@string/_5"
                    android:textAlignment="center"
                    android:textSize="18sp" />

                <Spinner
                    android:id="@+id/spinner_five"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:padding="6dp"
                    android:textAlignment="center"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/credit5_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1.40"
                    android:inputType="number|numberDecimal"
                    android:padding="6dp"
                    android:textAlignment="center"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="3">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="0.60"
                    android:padding="6dp"
                    android:text="@string/_6"
                    android:textAlignment="center"
                    android:textSize="18sp" />

                <Spinner
                    android:id="@+id/spinner_six"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:padding="6dp"
                    android:textAlignment="center"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/credit6_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1.40"
                    android:inputType="number|numberDecimal"
                    android:padding="6dp"
                    android:textAlignment="center"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="3">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="0.60"
                    android:padding="6dp"
                    android:text="@string/_7"
                    android:textAlignment="center"
                    android:textSize="18sp" />

                <Spinner
                    android:id="@+id/spinner_seven"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:padding="6dp"
                    android:textAlignment="center"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/credit7_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1.40"
                    android:inputType="number|numberDecimal"
                    android:padding="6dp"
                    android:textAlignment="center"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="3">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="0.60"
                    android:padding="6dp"
                    android:text="@string/_8"
                    android:textAlignment="center"
                    android:textSize="18sp" />

                <Spinner
                    android:id="@+id/spinner_eight"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:padding="6dp"
                    android:textAlignment="center"
                    android:textSize="12sp" />

                <EditText
                    android:id="@+id/credit8_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1.40"
                    android:inputType="number|numberDecimal"
                    android:padding="6dp"
                    android:textAlignment="center"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:weightSum="2">

                <Button
                    android:id="@+id/calc_gpa_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:onClick="displayGpa"
                    android:padding="16dp"
                    android:text="@string/calculate_btn"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/res_gpa_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:onClick="resetAll"
                    android:padding="16dp"
                    android:text="@string/reset_btn"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    tools:ignore="ButtonStyle" />
            </LinearLayout>
        </LinearLayout>

    </ScrollView>

</LinearLayout>
